Added a section for checking for feature importance.

--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -2386,8 +2386,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.10190942,  0.22382513, -0.04870691, -0.6918461 ,  0.03275635,\n",
-       "        0.36052819,  0.15399062, -0.00601302])"
+       "array([-0.0973846 ,  0.22294304, -0.05041317, -0.72429003,  0.03248617,\n",
+       "        0.3452176 ,  0.12951994, -0.01189338])"
       ]
      },
      "execution_count": 17,
@@ -2416,7 +2416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error on Training = 0.17619227694523432\n"
+      "Mean Squared Error on Training = 0.18320211685211601\n"
      ]
     }
    ],
@@ -2445,7 +2445,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error on Testing = 0.19174284590342416\n"
+      "Mean Squared Error on Testing = 0.16596821356807792\n"
      ]
     }
    ],
@@ -2625,23 +2625,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Training Errors: [0.17232073 0.11901932 0.11654714 0.10021883]\n",
-      "Average Validation Errors: [0.19431091 0.14047956 0.1453026  0.15752264]\n",
-      "Cross Validation suggests the best polynomial degree is 2\n",
-      "Mean Squared Error on Training = 0.12205652739878321\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "degree = cross_validate(X_train, r_train)\n",
     "poly_weights = polyreg_train(X_train, r_train, degree=degree)\n",
+    "print(\"\\nPolynomial Weights: {}\".format(poly_weights))\n",
     "lsquare_poly = error_polyreg(X_train, r_train, poly_weights)\n",
     "print(\"Mean Squared Error on Training = {}\".format(lsquare_poly))"
    ]
@@ -2650,7 +2640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing for Linear Regression\n",
+    "## Testing for Polynomial Regression\n",
     "Mean Squared Error will be used as the main testing algorithm.\n",
     "\n",
     "A basic percent error will also be used."
@@ -2665,7 +2655,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error on Testing = 0.12497687197059923\n"
+      "Mean Squared Error on Testing = 0.12489517987671556\n"
      ]
     }
    ],
@@ -2673,6 +2663,76 @@
     "lsquare_testpoly = error_polyreg(X_test, r_test, poly_weights)\n",
     "print(\"Mean Squared Error on Testing = {}\".format(lsquare_testpoly))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking for Feature Importance\n",
+    "\n",
+    "To see how important a feature is, columns are progressively removed from the dataset, and errors are obtained and printed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feature_analysis(X, r, degree):\n",
+    "    train_errors = []\n",
+    "    valid_errors = []\n",
+    "    for i in range(X.shape[1]):\n",
+    "        if i == 0:\n",
+    "            X_train = X[:]\n",
+    "        else:\n",
+    "            X_train = X[:-i]\n",
+    "        num_tr = X_train.shape[0]\n",
+    "        div_tr = num_rows // 4\n",
+    "        tr_max = 3 * div\n",
+    "        tr_inds = np.random.choice(range(num_tr), size=tr_max, replace=False)\n",
+    "        tr_valid_inds = [i for i in range(num_tr) if i not in tr_inds]\n",
+    "        X_train_tr = X_train[tr_inds, :]\n",
+    "        X_valid_tr = X_train[tr_valid_inds, :]\n",
+    "        r_train_tr = r[tr_inds]\n",
+    "        r_valid_tr = r[tr_valid_inds]\n",
+    "        weights = polyreg_train(X_train_tr, r_train_tr, degree=degree)\n",
+    "        te = error_polyreg(X_train_tr, r_train_tr, weights)\n",
+    "        ve = error_polyreg(X_valid_tr, r_valid_tr, weights)\n",
+    "        train_errors.append(te)\n",
+    "        valid_errors.append(ve)\n",
+    "    print(\"Training Errors by Starting Column:\\n  {}\\n\".format(train_errors))\n",
+    "    print(\"Validation Errors by Starting Column:\\n  {}\\n\".format(valid_errors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Errors by Starting Column:\n",
+      "  [0.11918866124261329, 0.13275030775094632, 0.12074927579587387, 0.12053446369042276, 0.12294904059905962, 0.13318907901928945, 0.12374643840479063, 0.10147257164429178]\n",
+      "\n",
+      "Validation Errors by Starting Column:\n",
+      "  [0.14396593954273068, 0.0970185043711741, 0.13364933280580304, 0.13397345747511416, 0.13096086296109186, 0.09487380791828665, 0.12474209591340364, 0.19722042056805428]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_analysis(X_train, r_train, degree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
