Current progress on write up.

--- a/project5/project5.ipynb
+++ b/project5/project5.ipynb
@@ -18,7 +18,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import classification_report, log_loss"
+    "from sklearn.metrics import classification_report, log_loss, f1_score"
    ]
   },
   {
@@ -337,7 +337,10 @@
       "   micro avg       0.97      0.97      0.97        88\n",
       "   macro avg       0.96      0.97      0.97        88\n",
       "weighted avg       0.97      0.97      0.97        88\n",
-      "\n"
+      "\n",
+      "\n",
+      "Testing F1 Score:\n",
+      "0.9696969696969697\n"
      ]
     },
     {
@@ -365,7 +368,10 @@
     "print()\n",
     "print(\"Classification Report for these parameters:\")\n",
     "y_true, y_pred = ioY_test, coarse_search.predict(ioX_test)\n",
-    "print(classification_report(y_true, y_pred))"
+    "print(classification_report(y_true, y_pred))\n",
+    "print()\n",
+    "print(\"Testing F1 Score:\")\n",
+    "print(f1_score(y_true, y_pred))"
    ]
   },
   {
@@ -680,7 +686,7 @@
       "{'C': 10, 'gamma': 0.1, 'kernel': 'rbf'}\n",
       "\n",
       "Best Fitting Log Loss Score:\n",
-      "-0.22469136800032466\n",
+      "-0.22487191601690965\n",
       "\n",
       "Classification Report for these parameters:\n",
       "              precision    recall  f1-score   support\n",
@@ -746,10 +752,10 @@
       "\n",
       "Best parameters found for SVC on vowel-context.data:\n",
       "\n",
-      "{'C': 10.5, 'gamma': 0.12000000000000004, 'kernel': 'rbf'}\n",
+      "{'C': 7.5, 'gamma': 0.11500000000000003, 'kernel': 'rbf'}\n",
       "\n",
       "Best Fitting Log Loss Score:\n",
-      "-0.2163932448525439\n",
+      "-0.21502783513405027\n",
       "\n",
       "Classification Report for these parameters:\n",
       "              precision    recall  f1-score   support\n",
@@ -758,21 +764,21 @@
       "         1.0       1.00      1.00      1.00        20\n",
       "         2.0       1.00      1.00      1.00        22\n",
       "         3.0       1.00      1.00      1.00        20\n",
-      "         4.0       1.00      1.00      1.00        25\n",
-      "         5.0       1.00      0.96      0.98        23\n",
+      "         4.0       0.96      1.00      0.98        25\n",
+      "         5.0       1.00      0.91      0.95        23\n",
       "         6.0       1.00      1.00      1.00        23\n",
       "         7.0       1.00      1.00      1.00        24\n",
       "         8.0       1.00      1.00      1.00        17\n",
       "         9.0       1.00      1.00      1.00        27\n",
       "        10.0       0.95      1.00      0.98        20\n",
       "\n",
-      "   micro avg       1.00      1.00      1.00       248\n",
-      "   macro avg       1.00      1.00      1.00       248\n",
-      "weighted avg       1.00      1.00      1.00       248\n",
+      "   micro avg       0.99      0.99      0.99       248\n",
+      "   macro avg       0.99      0.99      0.99       248\n",
+      "weighted avg       0.99      0.99      0.99       248\n",
       "\n",
       "\n",
       "Testing Log Loss Score:\n",
-      "0.10246953863427469\n"
+      "0.10493454505900618\n"
      ]
     },
     {
@@ -937,7 +943,7 @@
       "{'C': 0.1, 'gamma': 0.1, 'kernel': 'rbf'}\n",
       "\n",
       "Best Fitting Log Loss Score:\n",
-      "-0.4617627098415815\n",
+      "-0.4613266538148824\n",
       "\n",
       "Classification Report for these parameters:\n",
       "              precision    recall  f1-score   support\n",
@@ -998,28 +1004,28 @@
       "\n",
       "Best parameters found for SVC on sat data:\n",
       "\n",
-      "{'C': 0.075, 'gamma': 0.12000000000000004, 'kernel': 'rbf'}\n",
+      "{'C': 0.085, 'gamma': 0.12000000000000004, 'kernel': 'rbf'}\n",
       "\n",
       "Best Fitting Log Loss Score:\n",
-      "-0.46043514812030534\n",
+      "-0.460337807878525\n",
       "\n",
       "Classification Report for these parameters:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         1.0       0.95      0.99      0.97       461\n",
-      "         2.0       0.89      0.99      0.93       224\n",
+      "         2.0       0.89      0.99      0.94       224\n",
       "         3.0       0.85      0.95      0.90       397\n",
-      "         4.0       0.74      0.51      0.61       211\n",
-      "         5.0       0.94      0.75      0.83       237\n",
-      "         7.0       0.83      0.87      0.85       470\n",
+      "         4.0       0.75      0.52      0.61       211\n",
+      "         5.0       0.93      0.76      0.83       237\n",
+      "         7.0       0.84      0.87      0.85       470\n",
       "\n",
       "   micro avg       0.88      0.88      0.88      2000\n",
-      "   macro avg       0.87      0.84      0.85      2000\n",
+      "   macro avg       0.87      0.85      0.85      2000\n",
       "weighted avg       0.87      0.88      0.87      2000\n",
       "\n",
       "\n",
       "Testing Log Loss Score:\n",
-      "0.31276157784502484\n"
+      "0.308763341038354\n"
      ]
     }
    ],
